# fourfury

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  README.md  pyproject.toml  setup.py
fourfury/: __init__.py  _utils.py  _wdr_geometry.py  _wdr_material.py  _wdr_math.py  _wdr_reader.py  _wdr_scene.py  animation.py  crypto.py  fragment.py  gtxd.py  ide.py  img.py  ipl.py  materials.py  model.py  nod.py  path.py  rpf.py  rsc.py  shaders.py  wad.py  wad_audit.py  water.py  wbd.py  wbn.py  wdd.py  wdr.py  wft.py  wft_audit.py  wnv.py  wpl.py  wpl_lod.py  wtd.py
fourfury/mlo/: __init__.py  definition.py
fourfury/wdr/: __init__.py  constants.py  geometry.py  material.py  reader.py  scene.py
src/: binary.hpp  crypto.cpp  module.cpp  native.cpp  native.hpp  wbn.cpp  wdr.cpp
tests/: test_animation.py  test_archives.py  test_crypto.py  test_gtxd.py  test_layered_terrain_shaders.py  test_map_formats.py  test_materials.py  test_model.py  test_native_wbn.py  test_native_wdr.py  test_nod.py  test_path.py  test_shaders.py  test_wad.py  test_water.py  test_wbd.py  test_wbn.py  test_wdd.py  test_wdr.py  test_wft.py  test_wnv.py  test_wtd.py
